--- a/model_bookstore/app/views/book_store/start.erb
+++ b/model_bookstore/app/views/book_store/start.erb
@@ -1,28 +1,77 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
+    <title>boox</title>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+
+    <link type="text/css" href="stylesheets/ui-lightness/jquery-ui-1.8.custom.css" rel="stylesheet" />
+    <link type="text/css" href="stylesheets/style.css" rel="stylesheet" />
+
     <script type="text/javascript" src="/javascripts/jquery-1.4.2.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="javascripts/jquery.ui.core.js"></script>
+    <script type="text/javascript" src="javascripts/jquery.ui.widget.js"></script>
+    <script type="text/javascript" src="javascripts/jquery-jtemplates.js"></script>
+    <script type="text/javascript" src="javascripts/ui.ariaSorTable.js"></script>
     <script type="text/javascript" src="/javascripts/main.js" charset="utf-8"></script>
-    <title>Kereső:</title>
+    <style>
+        #results td   { width:70px;text-align:center; }
+        #results td   { width:70px;text-align:center; }
+        #results img  { margin:0 auto;border-style:none; }
+        #content      { margin-top:20px; }
+        #template     { display:none; }
+        #results td a { text-decoration:none; }
+    </style>
   </head>
   <body>
     <div id="container">
-<!--      <form action="/search" method="post">-->
+      <form action="/search" method="post">
         <label for "author">Author:</label>
         <input type="text" id="author" name="author" />
         <label for "title">Title:</label>
         <input type="text" id="title" name="title" />
         <select id="bookStores" name="bookStores">
-<!--          <option value="">Könyvesboltok</option>-->
+          <option value="">Bookstores</option>
           <option value="Amazon">Amazon</option>
-<!--          <option value="Bookline">Bookline</option>-->
+          <option value="Bookline">Bookline</option>
         </select>
         <input id="submit" type="submit" value="search" />
-<!--      </form>-->
+      </form>
     </div>
     <div id="content">
     </div>
+
+    <textarea id="template">
+		<table id="results">
+			  <thead>
+			    <tr>
+					    <th class="ui-table-text ui-state-default"><a href="#">title</a></th>
+					    <th class="ui-table-text ui-state-default"><a href="#server_site_order">author</a></th>
+					    <th class="ui-table-number-de ui-state-default"><a href="#server_site_order">isbn</a></th>
+					    <th class="ui-table-number-de ui-state-default"><a href="#server_site_order">ean</a></th>
+					    <th class="ui-table-date-iso ui-state-default"><a href="#server_site_order">publicationdate</a></th>
+					    <th class="ui-table-text ui-state-default"><a href="#server_site_order">publisher</a></th>
+					    <th class="ui-table-number-de ui-state-default"><a href="#server_site_order">price ({main.currency[main.bookStore]})</a></th>
+					    <th>image</th>
+			    </tr>
+	      </thead>
+			{#foreach $T as item}
+			  <tbody>
+			    <tr>
+					    <td>{#if $T.item.title != ""}<a href="#" onclick="main.wiki(this);" rel="type=title&key={escape($T.item.title)}">{$T.item.title}</a>{#else}no data{#/if}</td>
+					    <td>{#if $T.item.author != ""}<a href="#" onclick="main.wiki(this);" rel="type=author&key={escape($T.item.author)}">{$T.item.author}</a>{#else}no data{#/if}</td>
+					    <td>{#if $T.item.isbn != ""}<a href="#" onclick="main.wiki(this);" rel="type=isbn&key={escape($T.item.isbn)}">{$T.item.isbn}</a>{#else}no data{#/if}</td>
+					    <td>{$T.item.ean}</td>
+					    <td>{#if $T.item.publicationdate.length == 4}{$T.item.publicationdate}-01-01{#else}{$T.item.publicationdate}{#/if}</td>
+					    <td>{#if $T.item.publisher != ""}<a href="#" onclick="main.wiki(this);" rel="type=publisher&key={escape($T.item.publisher)}">{$T.item.publisher}</a>{#else}no data{#/if}</td>
+					    <td>{$T.item.price}</td>
+					    <td><a href="{$T.item.linkToTheProduct}" target='_blank'><img src="{#if $T.item.img != ""}{$T.item.img}{#else}{main.table.noImage}{#/if}" /></a></td>
+			    </tr>
+			  </tbody>
+			{#/for}
+		</table>
+	</textarea>
+
+
   </body>
 </html>
 
