--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,26 +1,38 @@
-<script type="text/javascript">
-		var head = document.getElementsByTagName("script")[0].parentNode,
-		main 			= document.createElement("script"),
-		extAll	 	= document.createElement("script"),
-		extBase	 	= document.createElement("script"),
-		cssExt 		= document.createElement("link"),
-		cssStyle 	= document.createElement("link");
-		
-		cssStyle.setAttribute("type", "text/css");
-		cssStyle.setAttribute("rel", 	"stylesheet");
-		cssStyle.setAttribute("href", "css/style.css");
-		cssExt.setAttribute("type", 	"text/css");
-		cssExt.setAttribute("rel", 		"stylesheet");
-		cssExt.setAttribute("href", 	"../../ext-4.0.2a/resources/css/ext-all.css");
-		extBase.setAttribute("type", 	"text/javascript");
-		extBase.setAttribute("src", 	"ext/adapter/ext/ext-base.js");
-		extAll.setAttribute("type", 	"text/javascript");
-		extAll.setAttribute("src", 		"ext/ext-all.js");
-		main.setAttribute("type", 		"text/javascript");
-		main.setAttribute("src", 			"js/main.js");
-		head.appendChild(extBase);
-		head.appendChild(extAll);
-		head.appendChild(cssExt);
-		head.appendChild(cssStyle);
-		head.appendChild(main);
-</script>
+<link rel="stylesheet" type="text/css" href="../../ext-4.0.2a/resources/css/ext-all.css">
+<script type="text/javascript" src="../../ext-4.0.2a/ext-debug.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+<!--html>
+	<head>
+	    <title>Hello Ext</title>
+			<script type="text/javascript">
+			//var head = document.getElementsByTagName("script")[0].parentNode,
+			//main 			= document.createElement("script"),
+			/*extAll	 	= document.createElement("script"),*/
+			//extBase	 	= document.createElement("script"),
+			//cssExt 		= document.createElement("link"),
+			//cssStyle 	= document.createElement("link");
+			
+			//cssStyle.setAttribute("type", "text/css");
+			//cssStyle.setAttribute("rel", 	"stylesheet");
+			//cssStyle.setAttribute("href", "css/style.css");
+			//cssExt.setAttribute("type", 	"text/css");
+			//cssExt.setAttribute("rel", 		"stylesheet");
+			//cssExt.setAttribute("href", 	"../../ext-4.0.2a/resources/css/ext-all.css");
+			//extBase.setAttribute("type", 	"text/javascript");
+			//extBase.setAttribute("src", 	"../../ext-4.0.2a/ext-all.js");
+			/*extAll.setAttribute("type", 	"text/javascript");
+			extAll.setAttribute("src", 		"ext/ext-all.js");*/
+			//main.setAttribute("type", 		"text/javascript");
+			//main.setAttribute("src", 			"js/main.js");
+			//head.appendChild(cssExt);
+			//head.appendChild(cssStyle);
+			//head.appendChild(extBase);
+			/*head.appendChild(extAll);*/
+			//head.appendChild(main);
+			</script>
+	    <link rel="stylesheet" type="text/css" href="../../ext-4.0.2a/resources/css/ext-all.css">
+	    <script type="text/javascript" src="../../ext-4.0.2a/ext-debug.js"></script>
+	    <script type="text/javascript" src="js/main.js"></script>
+	</head>
+	<body></body>
+</html-->
