group model is finished

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,9 +1,6 @@
-<!--link rel="stylesheet" type="text/css" href="../../ext-4.0.2a/resources/css/ext-all.css">
-<script type="text/javascript" src="../../ext-4.0.2a/ext-debug.js"></script>
-<script type="text/javascript" src="js/main.js"></script-->
 <html>
 	<head>
-	    <title>Hello Ext</title>
+	    <title>Maxima</title>
 			<script type="text/javascript">
 			/*var head = document.getElementsByTagName("script")[0].parentNode,
 			main 			= document.createElement("script"),
@@ -20,7 +17,7 @@
 			extBase.setAttribute("type", 	"text/javascript");
 			extBase.setAttribute("src", 	"../../ext-4.0.2a/ext-all.js");
 			main.setAttribute("type", 		"text/javascript");
-			main.setAttribute("src", 			"js/main.js");
+			main.setAttribute("src", 			"js/build/main-debug.js");
 			head.appendChild(cssExt);
 			head.appendChild(cssStyle);
 			head.appendChild(extBase);
