--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -23,8 +23,8 @@
 			head.appendChild(extBase);
 			head.appendChild(main);*/
 			</script>
-	    <link rel="stylesheet" type="text/css" href="../../ext-4.0.2a/resources/css/ext-all.css">
-	    <script type="text/javascript" src="../../ext-4.0.2a/ext-all.js"></script>
+	    <link rel="stylesheet" type="text/css" href="../ext-4.0.2a/resources/css/ext-all.css">
+	    <script type="text/javascript" src="../ext-4.0.2a/ext-all.js"></script>
 	    <script type="text/javascript" src="js/build/main-debug.js"></script>
 	</head>
 	<body></body>
