login form, mvc baszkodas

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -2,6 +2,12 @@
 	<head>
 	    <title>Maxima</title>
 			<script type="text/javascript">
+			
+			if(typeof console.log == "undefined") {
+			  var console = {};
+			  console.log = function() {};
+			}
+			
 			/*var head = document.getElementsByTagName("script")[0].parentNode,
 			main 			= document.createElement("script"),
 			extBase	 	= document.createElement("script"),
