ext-tamplate add finished

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -30,8 +30,11 @@
 			head.appendChild(cssStyle);
 			head.appendChild(extBase);
 			head.appendChild(main);*/
-			</script>
-	    <link rel="stylesheet" type="text/css" href="../ext-4.0.2a/resources/css/ext-all.css">
+			</script>  
+	    <!--link rel="stylesheet" type="text/css" href="../ext-4.0.2a/resources/css/ext-all.css"-->
+	    
+	    <link rel="stylesheet" type="text/css" href="http://extjs.cachefly.net/ext-4.0.2a/resources/css/ext-all.css">
+	    
 	    <script type="text/javascript" src="../ext-4.0.2a/ext-all.js"></script>
 	    <script type="text/javascript" src="js/build/main-debug.js"></script>
 	</head>
