init zend-ext template engine

--- a/application/views/scripts/ext-template/index.phtml
+++ b/application/views/scripts/ext-template/index.phtml
@@ -9,6 +9,7 @@
     },
     items: [{
             xtype: 'container',
+            id: 'VALAMI',
             margin: 10,
             layout: {
                 align: 'stretch',
