--- a/application/views/scripts/ext-template/translate.phtml
+++ b/application/views/scripts/ext-template/translate.phtml
@@ -1,8 +1,4 @@
 {
-    xtype: 'viewport',
-    margin: 20,
-    items: [
-        {
             xtype: 'container',
             height: 895,
             tpl: Ext.create('Ext.XTemplate',
@@ -15,7 +11,7 @@
             },
             items: [
                 {
-                    xtype: 'container',
+                    xtype: ' ',
                     tpl: Ext.create('Ext.XTemplate',
                         ''
                     ),
@@ -75,6 +71,4 @@
                     ]
                 }
             ]
-        }
-    ]
 }
