--- a/application/views/scripts/ext-template/translate.phtml
+++ b/application/views/scripts/ext-template/translate.phtml
@@ -50,7 +50,7 @@
               displayMsg  : 'Találatok: {0} - {1} of {2}',
               emptyMsg    : "Nincs találat."
             }]    
-          },{
+          }/*,{
               xtype :'buttongroup',
               columns:2,
               layout:{ align:'right',type: 'fit' },
@@ -61,7 +61,7 @@
                 xtype :'button',
                 text:'delete'
               }]
-            }]
+            }*/]
         }, {
           xtype   : 'container',
           id      : "rightside",
@@ -104,7 +104,7 @@
           },{
           xtype   : 'panel',
           title   : 'Categories',
-          height  : 200,
+          height  : 100,
           width   : 300,
           flex    : 2,
           layout  : {
@@ -121,6 +121,45 @@
             valueField: 'catval',
             triggerAction : 'all'  
           },{
+            xtype :'buttongroup',
+            columns:2,
+            items: [{
+              xtype :'button',
+              text: 'add'
+            },{
+              xtype :'button',
+              text:'delete'
+            }]
+          }]
+        },{
+          xtype   : 'panel',
+          title   : 'Variables',
+          height  : 100,
+          width   : 300,
+          flex    : 2,
+          layout  : {
+            type    : 'vbox'
+          },
+          columns : 2,
+          items: [{
+            xtype: 'combo',
+            id: 'categoriesChooser',
+            fieldLabel: 'Choose category',
+            store: self.scope.model.catStore,
+            queryMode: 'local',
+            displayField: 'cat',
+            valueField: 'catval',
+            triggerAction : 'all'  
+          },/*{
+            xtype: 'combo',
+            id: 'variablesChooser',
+            fieldLabel: 'Choose item',
+            store: self.scope.model.variableStore,
+            queryMode: 'local',
+            displayField: 'var',
+            valueField: 'varval',
+            triggerAction : 'all'  
+          },*/{
             xtype :'buttongroup',
             columns:2,
             items: [{
