--- a/application/views/scripts/ext-template/translate.phtml
+++ b/application/views/scripts/ext-template/translate.phtml
@@ -83,7 +83,8 @@
             },
             items: [{
               xtype: 'combo',
-              id: 'languages',
+              id: 'varCombo',
+              id: 'langCombo',
               fieldLabel: 'Choose language',
               store: self.scope.model.langStore,
               queryMode: 'local',
@@ -95,9 +96,11 @@
               columns:2,
               items: [{
                 xtype :'button',
+                id: 'langComboAdd',
                 text: 'add'
               },{
                 xtype :'button',
+                id: 'langComboDel',
                 text:'delete'
               }]
             }]
@@ -113,7 +116,7 @@
           columns : 2,
           items: [{
             xtype: 'combo',
-            id: 'categories',
+            id: 'catCombo',
             fieldLabel: 'Choose category',
             store: self.scope.model.catStore,
             queryMode: 'local',
@@ -125,9 +128,11 @@
             columns:2,
             items: [{
               xtype :'button',
+              id: 'catComboAdd',
               text: 'add'
             },{
               xtype :'button',
+              id: 'catComboDel',
               text:'delete'
             }]
           }]
@@ -143,30 +148,23 @@
           columns : 2,
           items: [{
             xtype: 'combo',
-            id: 'categoriesChooser',
+            id: 'varCombo',
             fieldLabel: 'Choose category',
             store: self.scope.model.catStore,
             queryMode: 'local',
             displayField: 'cat',
             valueField: 'catval',
             triggerAction : 'all'  
-          },/*{
-            xtype: 'combo',
-            id: 'variablesChooser',
-            fieldLabel: 'Choose item',
-            store: self.scope.model.variableStore,
-            queryMode: 'local',
-            displayField: 'var',
-            valueField: 'varval',
-            triggerAction : 'all'  
-          },*/{
+          },{
             xtype :'buttongroup',
             columns:2,
             items: [{
               xtype :'button',
+              id: 'varComboAdd',
               text: 'add'
             },{
               xtype :'button',
+              id: 'varComboDel',
               text:'delete'
             }]
           }]
