--- a/application/views/scripts/ext-template/translate.phtml
+++ b/application/views/scripts/ext-template/translate.phtml
@@ -17,6 +17,7 @@
     items:[{
         
         xtype: 'container',
+        id      : 'gridHolder',
         margin: 5,
         layout: {
           align: 'center',
