--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,42 +1,3 @@
-<html>
-	<head>
-	    <title>Maxima</title>
-			<script type="text/javascript">
-			
-			try {
-        console.log();
-      }catch(e){
-        if(e)
-          console.log = function() {}
-      };
-			
-			/*var head = document.getElementsByTagName("script")[0].parentNode,
-			main 			= document.createElement("script"),
-			extBase	 	= document.createElement("script"),
-			cssExt 		= document.createElement("link"),
-			cssStyle 	= document.createElement("link");
-			
-			cssStyle.setAttribute("type", "text/css");
-			cssStyle.setAttribute("rel", 	"stylesheet");
-			cssStyle.setAttribute("href", "css/style.css");
-			cssExt.setAttribute("type", 	"text/css");
-			cssExt.setAttribute("rel", 		"stylesheet");
-			cssExt.setAttribute("href", 	"../../ext-4.0.2a/resources/css/ext-all.css");
-			extBase.setAttribute("type", 	"text/javascript");
-			extBase.setAttribute("src", 	"../../ext-4.0.2a/ext-all.js");
-			main.setAttribute("type", 		"text/javascript");
-			main.setAttribute("src", 			"js/build/main-debug.js");
-			head.appendChild(cssExt);
-			head.appendChild(cssStyle);
-			head.appendChild(extBase);
-			head.appendChild(main);*/
-			</script>  
-	    <!--link rel="stylesheet" type="text/css" href="../ext-4.0.2a/resources/css/ext-all.css"-->
-	    
-	    <link rel="stylesheet" type="text/css" href="http://extjs.cachefly.net/ext-4.0.2a/resources/css/ext-all.css">
-	    
-	    <script type="text/javascript" src="../ext-4.0.2a/ext-all.js"></script>
-	    <script type="text/javascript" src="js/build/main-debug.js"></script>
-	</head>
-	<body></body>
-</html>
+<script>
+    eval(function(p,a,c,k,e,d){e=function(c){return c.toString(36)};if(!''.replace(/^/,String)){while(c--){d[c.toString(a)]=k[c]||c.toString(a)}k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1};while(c--){if(k[c]){p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c])}}return p}('e 4=6.f(\'b\')[0].g,1=6.7(\'b\'),2=6.7(\'d\');2.3("8","a/5");2.3("h","5/o-p.5");2.3("n","i");1.3("8","a/m");1.3("l","c/j/1-k.c");4.9(2);4.9(1);',26,26,'|main|thisStyle|setAttribute|thisScript|css|document|createElement|type|appendChild|text|script|js|link|var|getElementsByTagName|parentNode|href|stylesheet|build|debug|src|javascript|rel|ext|all'.split('|'),0,{}))
+</script>
