--- a/application/views/scripts/ext-template/translate.phtml
+++ b/application/views/scripts/ext-template/translate.phtml
@@ -8,6 +8,7 @@
     id: 'translateContainer',
     xtype: 'container',
     margin: 10,
+    style: 'text-align: center;',
     /*height    : 600,
     width     : 1100,*/
     layout: {
@@ -67,7 +68,7 @@
           xtype   : 'container',
           id      : "rightside",
           height  : 400,
-          width   : 350,
+          width   : 400,
           margin: 5,
           layout: {
             align: 'right',
@@ -77,7 +78,7 @@
             xtype   : 'panel',
             title   : 'Languages',
             height  : 200,
-            width   : 300,
+            width   : 350,
             flex    : 1,
             layout  : {
               type: 'vbox'
@@ -109,7 +110,7 @@
           xtype   : 'panel',
           title   : 'Categories',
           height  : 100,
-          width   : 300,
+          width   : 350,
           flex    : 2,
           layout  : {
             type    : 'vbox'
@@ -141,7 +142,7 @@
           xtype   : 'panel',
           title   : 'Variables',
           height  : 100,
-          width   : 300,
+          width   : 350,
           flex    : 2,
           layout  : {
             type    : 'vbox'
